[package]
name = "pmtiles-raster-tool"
version = "0.1.0"
authors = ["Keitaroh Kobayashi <keita@kotobamedia.com>"]
repository = "https://github.com/KotobaMedia/pmtiles-raster-tool"
edition = "2024"
license = "MIT"
exclude = [".github"]

[dependencies]
anyhow = "1"
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
flume = "0.11"
futures-util = "0.3"
indicatif = "0.18"
pmtiles = { version = "0.16", default-features = false, features = ["write", "mmap-async-tokio", "iter-async"] }
png = { version = "0.18", features = ["zlib-rs"] }
rayon = "1.11"
tokio = { version = "1", features = ["full"] }

[patch.crates-io]
pmtiles = { git = "https://github.com/keichan34/pmtiles-rs", branch = "writer-dedup" }
# pmtiles = { path = "../pmtiles-rs-km" }
